[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sushi_1.png" type="Texture" id=1]
[ext_resource path="res://actors/Collectable/Collectable.gd" type="Script" id=2]
[ext_resource path="res://assets/star_1.png" type="Texture" id=3]

[sub_resource type="Gradient" id=7]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.245161, 0.716129, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 8 )

[sub_resource type="CircleShape2D" id=6]
radius = 14.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "pickup"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "spawn"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Collectable" type="Node2D"]
script = ExtResource( 2 )

[node name="CollectionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.6
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 9 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 2 )
anims/pickup = SubResource( 4 )
anims/spawn = SubResource( 5 )

[node name="PickupAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
